fixed alignment on Post Creation

--- a/AspNetBlog/wwwroot/css/styles.css
+++ b/AspNetBlog/wwwroot/css/styles.css
@@ -2975,11 +2975,6 @@ html {
   margin: 0.25rem;
 }
 
-.-mx-3 {
-  margin-left: -0.75rem;
-  margin-right: -0.75rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -3555,6 +3550,14 @@ html {
 
 .pb-3 {
   padding-bottom: 0.75rem;
+}
+
+.pl-3 {
+  padding-left: 0.75rem;
+}
+
+.pr-3 {
+  padding-right: 0.75rem;
 }
 
 .pt-32 {
